# TradeCoinPub

./: .gitignore  README.md  go.mod  go.sum  lerna.json  package-lock.json  package.json
apps/auth-api/: Cargo.toml  Dockerfile  Rocket.toml  config.yaml  local.toml  prod.toml  readme.md
apps/auth-api/helm/: Chart.yaml  values.yaml
apps/auth-api/helm/templates/: deployment.yaml  service.yaml
apps/auth-api/src/: main.rs
apps/product-service/: .gitignore  Dockerfile  Makefile  README.md  local.yaml  main.go
apps/product-service/cmd/: root.go  type.go  util.go
apps/product-service/config/: options.go
apps/product-service/database/: connection.go  prepopulateDocTypes.go  prepopulateTransformation.go  prepopulateUnits.go  schema.go
apps/product-service/event/: event.go  http.go
apps/product-service/http/: http.go  liveness.go  metrics.go
apps/product-service/model/: product.go
apps/product-service/process/: lifecycle.go
apps/tradecoin-ui/: README.md  package-lock.json  package.json
apps/tradecoin-ui/config/: .env.dev
pkg/customer-journey/: .gitignore  journey.go  package.json
pkg/new-customer-journey/: README.md  journey.go  package.json  truffle-config.js
pkg/new-notary/: notary.go  package.json  truffle-config.js
pkg/notary/: .gitignore  README.md  notary.go  package.json
pkg/tokenization/: .gitignore  .solcover.js  Readme.md  hardhat.config.js  package-lock.json  package.json  tradeCoin.go  tradeCoinComposition.go  tradeCoinCompositionSales.go  truffle-config.js
pkg/vault/: .gitignore  README.md  package.json  truffle-config.js  vault.go
(+126 files in other folders)
