[package]
name = "auth"
version = "0.1.0"
authors = ["ACJuicyJ <jason@blocklab.bl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_cors = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Database dependencies
postgres = { version = "0.19.0", features = ["with-uuid-0_8", "with-serde_json-1"] }
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
# Token dependencies with async runtime of tokio
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
time = "0.1"
uuid = { version = "0.8.2", features = ["serde"] }
# Cli tool
argh = "0.1.3"

[dependencies.confy]
version = "0.4.0"
default-features = false

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "postgres_pool"]